Fix unwanted horizontal scrollbar

--- a/site/resources/styles/core/core-mixins.less
+++ b/site/resources/styles/core/core-mixins.less
@@ -262,6 +262,12 @@
   padding-right: @value;
 }
 
+.regular-x-spacing(@value: @standard_spacing)
+{
+  padding-left: @value;
+  padding-right: @value;
+}
+
 .align-left
 {
   float: left;
